crates/au-cli/tests/it/snapshots/it__scenarios__body-block-id-not-typed.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "block-id-not-typed",
      "message": "wikilink `[[research-notes^^untyped-block]]` — block `untyped-block` exists but isn't typed (no `[:field]` fence)",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/body-block-id-not-typed/decision.md",
        "line_col": {
          "end": {
            "col": 46,
            "line": 11
          },
          "start": {
            "col": 1,
            "line": 11
          }
        },
        "range": {
          "end": 247,
          "start": 202
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 29,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-block-id-not-typed/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-block-id-not-typed"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-block-id-not-typed"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-block-id-not-typed/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 83,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 77
            },
            "text": "Why"
          },
          {
            "content": "^untyped-block",
            "kind": "inline_code",
            "span": {
              "end": 110,
              "line_col": {
                "end": {
                  "col": 27,
                  "line": 9
                },
                "start": {
                  "col": 11,
                  "line": 9
                }
              },
              "start": 94
            }
          },
          {
            "kind": "wikilink",
            "parsed": {
              "anchor": null,
              "block_id": {
                "id": "untyped-block",
                "referent": true
              },
              "commit": null,
              "field": "assumptions",
              "repo": null,
              "target": "research-notes"
            },
            "raw": "research-notes^^untyped-block:assumptions",
            "span": {
              "end": 247,
              "line_col": {
                "end": {
                  "col": 46,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 11
                }
              },
              "start": 202
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumptions",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/body-block-id-not-typed/type/decision.type.yaml",
                "required": false,
                "shape": "assumption&[+]"
              }
            ],
            "required": false,
            "shape": "assumption&[+]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/body-block-id-not-typed/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 247,
                        "line_col": {
                          "end": {
                            "col": 46,
                            "line": 11
                          },
                          "start": {
                            "col": 1,
                            "line": 11
                          }
                        },
                        "start": 202
                      },
                      "file": "<root>/scenarios/body-block-id-not-typed/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Why"
                      }
                    ],
                    "surface": "body_wikilink",
                    "value": {
                      "anchor": null,
                      "block_id": {
                        "id": "untyped-block",
                        "referent": true
                      },
                      "kind": "reference",
                      "target": "research-notes"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": {
                    "id": "untyped-block",
                    "referent": true
                  },
                  "kind": "reference",
                  "target": "research-notes"
                }
              }
            ],
            "field": "assumptions"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/body-block-id-not-typed/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/body-block-id-not-typed/decision.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Why",
            "optional": false,
            "path": [
              "Why"
            ],
            "present": true,
            "span": {
              "end": 83,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 77
            }
          }
        ]
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 120,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 109
            },
            "text": "Findings"
          },
          {
            "id": "untyped-block",
            "kind": "block_id_marker",
            "span": {
              "end": 170,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 155
            }
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/body-block-id-not-typed/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 103,
                        "line_col": {
                          "end": {
                            "col": 89,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/body-block-id-not-typed/research-notes.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Notes file with an untyped block-id (no typed fence preceding the marker)"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Notes file with an untyped block-id (no typed fence preceding the marker)"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/body-block-id-not-typed/research-notes.md",
        "section_presence": null
      }
    ]
  }
}
