crates/au-cli/tests/it/snapshots/it__scenarios__body-brand-mismatch.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "brand-constructor-mismatch",
      "message": "field 'length' constructor names brand 'second', but the slot demands 'meter'",
      "related": [
        {
          "file": "<root>/scenarios/body-brand-mismatch/type/measurement.type.yaml",
          "line_col": {
            "end": {
              "col": 16,
              "line": 2
            },
            "start": {
              "col": 11,
              "line": 2
            }
          },
          "range": {
            "end": 23,
            "start": 18
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/body-brand-mismatch/beam.md",
        "line_col": {
          "end": {
            "col": 35,
            "line": 6
          },
          "start": {
            "col": 13,
            "line": 6
          }
        },
        "range": {
          "end": 69,
          "start": 47
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 25,
                        "line_col": {
                          "end": {
                            "col": 26,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-brand-mismatch/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-brand-mismatch"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-brand-mismatch"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-brand-mismatch/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "content": "[:length] second(42)",
            "kind": "inline_code",
            "span": {
              "end": 69,
              "line_col": {
                "end": {
                  "col": 35,
                  "line": 6
                },
                "start": {
                  "col": 13,
                  "line": 6
                }
              },
              "start": 47
            }
          },
          {
            "content": "meter",
            "kind": "inline_code",
            "span": {
              "end": 99,
              "line_col": {
                "end": {
                  "col": 65,
                  "line": 6
                },
                "start": {
                  "col": 58,
                  "line": 6
                }
              },
              "start": 92
            }
          }
        ],
        "claim": [
          "measurement"
        ],
        "closure": [
          "measurement"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "length",
            "origins": [
              {
                "name": "measurement",
                "origin_path": "<root>/scenarios/body-brand-mismatch/type/measurement.type.yaml",
                "required": true,
                "shape": "meter"
              }
            ],
            "required": true,
            "shape": "meter"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 69,
                        "line_col": {
                          "end": {
                            "col": 35,
                            "line": 6
                          },
                          "start": {
                            "col": 13,
                            "line": 6
                          }
                        },
                        "start": 47
                      },
                      "file": "<root>/scenarios/body-brand-mismatch/beam.md"
                    },
                    "section_path": [],
                    "surface": "body_inline_code",
                    "value": {
                      "brand": "second",
                      "kind": "scalar",
                      "value": 42
                    }
                  }
                ],
                "value": {
                  "brand": "second",
                  "kind": "scalar",
                  "value": 42
                }
              }
            ],
            "field": "length"
          }
        ],
        "file": "<root>/scenarios/body-brand-mismatch/beam.md",
        "section_presence": null
      }
    ]
  }
}
